tests/paczka1/fuzzy1/37431252.err
Error in line 5: u9IC83Z3 S753 91,4
Error in line 9: Ipx S910 57,5
Error in line 12: YQuAJVO7rg5 S910 166,7
Error in line 29: BMrCeIkQNG S77 26,2
